Allow for full bleed, hopefully won't cause bugs

--- a/styles/index.css
+++ b/styles/index.css
@@ -148,3 +148,19 @@
 		display: none !important;
 	}
 }
+
+.wrapper {
+	display: grid;
+	grid-template-columns:
+		1fr
+		min(65ch, 100%)
+		1fr;
+}
+.wrapper > * {
+	grid-column: 2;
+}
+.full-bleed,
+.math-display {
+	width: 100%;
+	grid-column: 1 / 4;
+}
